@@ -4,7 +4,6 @@
 //
 //                                       2003.10.23  A.Tajitsu
 
-
 #include"main.h"    // Main configuration header
 #include"version.h"
 #include"configfile.h"
@@ -7499,7 +7498,6 @@ void create_fcdb_para_dialog (typHOE *hg)
 	  
 	case FCDB_LAMOST_DR7:
 	  tmp=g_strdup_printf("<b>%s DR7 low</b>", db_name[hg->fcdb_type]);
-<<<<<<< HEAD
 	  break;
 
 	case FCDB_LAMOST_DR7M:
@@ -7510,18 +7508,6 @@ void create_fcdb_para_dialog (typHOE *hg)
 	  tmp=g_strdup_printf("<b>%s DR8 low</b>", db_name[hg->fcdb_type]);
 	  break;
 
-=======
-	  break;
-
-	case FCDB_LAMOST_DR7M:
-	  tmp=g_strdup_printf("<b>%s DR7 med</b>", db_name[hg->fcdb_type]);
-	  break;
-	  
-	case FCDB_LAMOST_DR8:
-	  tmp=g_strdup_printf("<b>%s DR8 low</b>", db_name[hg->fcdb_type]);
-	  break;
-
->>>>>>> ccaf9ff67d51e3241b7c241520e3fbf2629c9baa
 	case FCDB_LAMOST_DR8M:
 	  tmp=g_strdup_printf("<b>%s DR8 med</b>", db_name[hg->fcdb_type]);
 	  break;
